# chess

./: .gitignore
chess-engine/: Cargo.toml
chess-engine/src/: board.rs  main.rs  piece.rs  player.rs  state.rs  utils.rs
ui/: package-lock.json  tailwind.config.js
ui/src/app/: page.tsx
